watch list css and images

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,16 +1,24 @@
-<h1><%= @list.name %></h1>
-<p>Here are the movies of <%= @list.name %> list.</p>
+<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @list.photo.key %>">
+  <%= @list.name %>
+</div>
 
-<ul>
-  <% @list.movies.each do |movie| %>
-    <li>
-      <% bookmark = Bookmark.find_by(movie_id: movie.id, list_id: @list.id) %>
-      <img src= <%= movie.poster_url %>%  alt="image for the movie">
-      <h3><%= movie.title %></h3>
-      <p> <%= movie.rating %></p>
-       <%= link_to "Delete movie", bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
-    </li>
-  <% end %>
-</ul>
+<%= link_to "Add a movie to this list",  new_list_bookmark_path(@list), class: "btn btn-success" %>
 
-<%= link_to "Add a movie to this list",  new_list_bookmark_path(@list) %>
+<div class="row my-2 margin-left">
+    <% @list.movies.each do |movie| %>
+      <% bookmark = Bookmark.find_by(list: @list, movie: movie) %>
+      <div class="col-12 col-sm-6 mb-4" data-aos="zoom-in">
+        <div class="bg-white rounded shadow h-100">
+          <%= image_tag movie.poster_url, alt: movie.title, class: "movie-img rounded-top" %>
+          <div class="p-3 rounded-bottom d-flex flex-column">
+            <strong><%= movie.title %> <span class="text-muted font-weight-normal">• <%= movie.rating %> <i class="fas fa-star star-yellow"></i></span></strong>
+            <small class="text-muted"><%= movie.overview %></small>
+            <div class="d-flex align-items-end justify-content-between pt-4">
+              <div>
+                <i class="fas fa-quote-left me-2"></i><small class="flex-grow-1"><%= bookmark.comment %> <i class="fa fa-quote-right" aria-hidden="true"></i></small>
+              </div>
+            </div>
+          </div>
+        </div>
+    <% end %>
+</div>
