--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,6 +1,11 @@
 <h1>All of the lists</h1>
-<ul>
+
+
   <% @lists.each do |list| %>
-    <li><%= link_to list.name, list_path(list) %></li>
+    <div class="card-category"
+      style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key, height: 300, crop: :fill %>')">
+      <%= link_to list.name, list_path(list), class: "text-white  text-decoration-none" %>
+    </div>
   <% end %>
-</ul>
+
+<%= link_to "Add a list",  new_list_path, class: "btn btn-primary m-3" %>
