--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,6 +1,7 @@
 <h1>Make a new list</h1>
 
-<%= simple_form_for (@list) do |f| %>
+<%= simple_form_for @list do |f| %>
   <%= f.input :name %>
+  <%= f.input :photo, as: :file %>
   <%= f.submit %>
 <% end %>
