--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,7 +1,12 @@
-<h1>Make a new list</h1>
-
-<%= simple_form_for @list do |f| %>
-  <%= f.input :name %>
-  <%= f.input :photo, as: :file %>
-  <%= f.submit %>
-<% end %>
+<div class="container">
+  <h1>Make a new list</h1>
+  <div class="row">
+    <div class="col-12 col-lg-6">
+      <%= simple_form_for @list do |f| %>
+        <%= f.input :name %>
+        <%= f.input :photo, as: :file %>
+        <%= f.submit "Create list", class: "btn-flat" %>
+      <% end %>
+    </div>
+  </div>
+</div>
