--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,5 +3,8 @@
 @import "avatar";
 @import "form_legend_clear";
 @import "navbar";
-@import "banner";
+@import "cards";
 @import "movie";
+@import "banner";
+@import "button";
+@import "font";
