--- a/app/assets/stylesheets/components/_movie.scss
+++ b/app/assets/stylesheets/components/_movie.scss
@@ -1,6 +1,10 @@
 .movie-img {
   width: 100%;
-  height: 300px;
+  height: 340px;
   object-fit: cover;
   object-position: center;
+}
+
+.star-yellow {
+  color: yellow;
 }
